# stqry-cli

./: .env  .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  API-COVERAGE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASING.md  TESTING.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/stqry/: main.go
docs/: public_api.json
docs/plans/: 2026-04-10-python-sdk-design.md  2026-04-10-python-sdk-implementation.md
e2e/: codes.bats  collections.bats  config.bats  doctor.bats  media.bats  run.sh  screens.bats  test_helper.bash
e2e/recorder/: cassette.go  main.go  record.go  replay.go
internal/agentsmd/: AGENTS.md  CLAUDE.md  embed.go  sync_test.go
internal/api/: client.go  client_test.go  codes.go  codes_test.go  collections.go  collections_test.go  media.go  media_test.go  projects.go  projects_test.go  screens.go  screens_test.go  upload.go  upload_test.go  uploaded_files.go  uploaded_files_test.go
internal/buildinfo/: buildinfo.go
internal/cli/: codes.go  codes_test.go  collections.go  collections_test.go  completion.go  completion_helpers.go  completion_test.go  config.go  config_show.go  config_show_test.go  config_test.go  config_validate.go  config_validate_test.go  doctor.go  doctor_test.go  mcp.go  media.go  media_test.go  progress.go  projects.go  projects_test.go  root.go  root_test.go  screens.go  screens_test.go  setup.go  setup_test.go  skill.go  skill_test.go  uploaded_files.go
internal/completion/: cache.go  cache_test.go
internal/config/: config.go  config_test.go
internal/doctor/: doctor.go  skills.go  skills_test.go
internal/mcp/: json.go  resources.go  server.go  server_test.go  session.go  session_test.go  tools_codes.go  tools_collections.go  tools_config.go  tools_doctor.go  tools_media.go  tools_projects.go  tools_screens.go  tools_stub.go
internal/output/: output.go  output_test.go
internal/skills/: embed.go  export.go  export_test.go  install.go  install_test.go  skills_test.go  stqry-reference.md  (+1 more)
python/: README.md  build_wheels.py  pyproject.toml
python/stqry/: __init__.py  _http.py  _run.py  codes.py  collections.py  media.py  projects.py  screens.py
python/tests/: test_build_wheels.py  test_client.py  test_codes.py  test_collections.py  test_http.py  test_media.py  test_projects.py  test_run.py  test_screens.py
(+6 files in other folders)
