[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stqry"
dynamic = ["version"]
description = "Python SDK for the STQRY API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "STQRY", email = "support@stqry.com"}]
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mytours/stqry-cli"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.targets.wheel]
packages = ["stqry"]
