[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stqry"
version = "0.0.0"
description = "STQRY CLI - manage collections, screens, media, and content"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "STQRY", email = "support@stqry.com"}]
requires-python = ">=3.8"

[project.scripts]
stqry = "stqry._run:main"

[project.urls]
Homepage = "https://github.com/mytours/stqry-cli"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stqry*"]
